delete apiKey
